--- a/css/camera.css
+++ b/css/camera.css
@@ -96,14 +96,14 @@
 	z-index: 2;
 }
 .camera_target_content .camera_link {
-    background: url(../img/camera/blank.gif);
+    background: url(../images/blank.gif);
 	display: block;
 	height: 100%;
 	text-decoration: none;
 }
 .camera_loader {
     background: #fff url(../images/camera-loader.gif) no-repeat center;
-	background: rgba(255, 255, 255, 0.9) url(../img/camera/camera-loader.gif) no-repeat center;
+	background: rgba(255, 255, 255, 0.9) url(../images/camera-loader.gif) no-repeat center;
 	border: 1px solid #ffffff;
 	-webkit-border-radius: 18px;
 	-moz-border-radius: 18px;
@@ -172,7 +172,7 @@
 	z-index: 10;
 }
 .camera_prevThumbs div {
-	background: url(../img/camera/camera_skins.png) no-repeat -160px 0;
+	background: url(../images/camera_skins.png) no-repeat -160px 0;
 	display: block;
 	height: 40px;
 	margin-top: -20px;
@@ -191,7 +191,7 @@
 	z-index: 10;
 }
 .camera_nextThumbs div {
-	background: url(../img/camera/camera_skins.png) no-repeat -190px 0;
+	background: url(../images/camera_skins.png) no-repeat -190px 0;
 	display: block;
 	height: 40px;
 	margin-top: -20px;
