--- a/css/style.css
+++ b/css/style.css
@@ -120,9 +120,9 @@ article .art-content a:hover{text-decoration:none;color:#333; }
 /* ---------------------------------------------------------------------------- */
 /* -------------------------------------Footer--------------------------------- */
 /* ---------------------------------------------------------------------------- */
-footer {color: #333; text-align: center;background-color: #ffffff;}
-footer a{color: #E85356;}
-footer a:hover {color: #E85356;}
+footer {color: rgba(230, 83, 232, 0.62); text-align: center;}
+footer a{color: rgba(230, 83, 232, 0.62);}
+footer a:hover {color: rgba(230, 83, 232, 0.92);}
 footer .wrap-footer {padding: 30px 0;}
 footer .copyright {padding: 25px 0;}
 
@@ -157,7 +157,7 @@ transition: all .2s ease-in-out;width:30%;color:#ffffff;margin-top:40px;}
 .da-thumbs li a img {display: block;position: relative;}
 .da-thumbs li a {overflow: hidden;}
 .da-thumbs li a div {position: absolute;background: #333;background: rgba(0,0,0,0.7);width: 100%;height: 100%;}
-.da-thumbs li a div span {display: block;padding: 10px 0;margin: 40px 20px 20px 20px;text-transform: uppercase;font-weight: normal;color: rgba(255,255,255,0.9);text-shadow: 1px 1px 1px rgba(0,0,0,0.4);border-bottom: 1px solid rgba(255,255,255,0.5);box-shadow: 0 1px 0 rgba(0,0,0,0.1), 0 -10px 0 rgba(255,255,255,0.3);}
+.da-thumbs li a div span {display: block;padding: 10px 0;margin: 40px 20px 20px 20px;text-transform: uppercase;font-weight: normal;color: rgba(230, 83, 232, 0.62);text-shadow: 1px 1px 1px rgba(0,0,0,0.4);border-bottom: 1px solid rgba(255,255,255,0.5);box-shadow: 0 1px 0 rgba(0,0,0,0.1), 0 -10px 0 rgba(255,255,255,0.3);}
 
 /* ---------------------------------------------------------------------------- */
 /* ---------------------------------------Btn---------------------------------- */
