--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,11 @@ img{max-width:100%;	height: auto;width: auto\9; /* ie8 */}
 a{color: #333333;text-decoration: none;}
 a:hover{}
 
-h1 {font-size: 55px;}
-h2 {font-size: 45px;}
-h3 {font-size: 30px;}
-h4 {font-size: 25px;}
-h5 {font-size: 20px;}
+h1 {font-size: 30px;}
+h2 {font-size: 25px;}
+h3 {font-size: 20px;}
+h4 {font-size: 15px;}
+h5 {font-size: 10px;}
 
 .center{text-align: center; margin: 0 auto;}
 .f-right{float: right;}
@@ -48,26 +48,26 @@ header img{}
 /* ---------------------------------------------------------------------------- */
 #page-content{}
 #page-content.index-page {}
-#page-content.sub-page {padding: 30px 0;}
+#page-content.sub-page {padding: 20px 0;}
 
 /* ---HomePage--- */
-.box-content {padding: 50px 0;}
-.box-content .heading{margin-bottom: 30px; text-align: center;}
-.box-content .heading h2{font-size:45px;color: #fff;}
-.box-content.box-style{background: #000000;border-top: 1px solid #2d2d2d;border-bottom: 1px solid #2d2d2d;padding-bottom: 14px;padding-bottom:80px;}
+.box-content {padding: 10px 0;}
+.box-content .heading{margin-bottom: 10px; text-align: center;}
+.box-content .heading h2{font-size:35px;color: #fff;}
+.box-content.box-style{background: #000000;border-top: 1px solid #2d2d2d;border-bottom: 1px solid #2d2d2d;padding-bottom: 14px;padding-bottom:10px;}
 
 
 .box-content.box-1 {}
 .box-content.box-1 h3{color:#fff;}
-.box-content.box-1 img{margin-bottom: 20px;display:block;}
+.box-content.box-1 img{margin-bottom: 10px;display:block;}
 .box-content.box-1 strong{color:#fff;}
 
 .box-content.box-2 {}
-.box-content.box-2 .box-item{margin-bottom: 20px; display: inline-block;}
+.box-content.box-2 .box-item{margin-bottom: 10px; display: inline-block;}
 
 
 /* ---MainContent--- */
-#main-content {margin-bottom: 30px;}
+#main-content {margin-bottom: 5px;}
 
 article{padding:0 20px 30px 20px;margin-bottom:30px;}
 article:after, article:before{clear: both; content: '\0020'; display: block; visibility: hidden; width: 0; height: 0;}
@@ -151,13 +151,13 @@ transition: all .2s ease-in-out;width:30%;color:#ffffff;margin-top:40px;}
 /* ---------------------------------------------------------------------------- */
 /* -----------------------------------Img Effect------------------------------- */
 /* ---------------------------------------------------------------------------- */
-.da-thumbs {list-style: none;position: relative;margin: 20px auto;padding: 0;}
-.da-thumbs li {display:inline-block;margin: 5px;background: #fffeff;padding: 8px;position: relative;box-shadow: 0 1px 3px rgba(0,0,0,0.1);}
+.da-thumbs {list-style: none;position: relative;margin: 5px auto;padding: 0;}
+.da-thumbs li {display:inline-block;margin: 5px;background: #fffeff;padding: 1px;position: relative;box-shadow: 0 1px 3px rgba(0,0,0,0.1);}
 .da-thumbs li a,
 .da-thumbs li a img {display: block;position: relative;}
 .da-thumbs li a {overflow: hidden;}
 .da-thumbs li a div {position: absolute;background: #333;background: rgba(0,0,0,0.7);width: 100%;height: 100%;}
-.da-thumbs li a div span {display: block;padding: 10px 0;margin: 40px 20px 20px 20px;text-transform: uppercase;font-weight: normal;color: rgba(230, 83, 232, 0.62);text-shadow: 1px 1px 1px rgba(0,0,0,0.4);border-bottom: 1px solid rgba(255,255,255,0.5);box-shadow: 0 1px 0 rgba(0,0,0,0.1), 0 -10px 0 rgba(255,255,255,0.3);}
+.da-thumbs li a div span {display: block;padding: 10px 0;margin: 40px 20px 20px 20px;text-transform: uppercase;font-weight: normal;color: #FFF;text-shadow: 1px 1px 1px rgba(0,0,0,0.4);border-bottom: 1px solid rgba(255,255,255,0.5);box-shadow: 0 1px 0 rgba(0,0,0,0.1), 0 -10px 0 rgba(255,255,255,0.3);}
 
 /* ---------------------------------------------------------------------------- */
 /* ---------------------------------------Btn---------------------------------- */
