--- a/css/kc.fab.css
+++ b/css/kc.fab.css
@@ -17,6 +17,16 @@
   bottom:0px;
   pointer-events:none;
 }
+.kc_fab_wrapper2{
+  z-index: 25;
+  width:100%;
+  height:400px;
+  position:fixed;
+  right:-200px;
+  top:40px;
+  bottom: 100px;
+  float:right;
+}
 .sub_fab_btns_wrapper{
   right:0;
   bottom:75px;
